<resources>
    <string name="app_name">Contacts</string>
    <string name="title_activity_contact_details">Contacts</string>
    <string name="title_activity_contact_details__recycler_view">Contacts</string>

    <string name="action_settings">Settings</string>

    <string name="db_drop">DROP IF TABLE EXISTS</string>
    <string name="txt_contact_name">Contact Name</string>
    <string name="txt_company_name">Company</string>
    <string name="txt_title_name">Title</string>
    <string name="txt_video_call">Video Call</string>

    <string name="menu_home_screen">Place on Home Screen</string>
    <string name="menu_voicemail">Voicemail not in use</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="menu_delete_contact">Delete Contact</string>
    <string name="menu_share">Share</string>
    <string name="menu_set_default_sim_for_calls">Set default SIM for calls</string>
    <string name="import_export_contacts">Import/Export Contacts</string>
    <string name="sure_text_delete">Delete this contact?</string>
    <string name="yes_text">Delete</string>
    <string name="no_text">Cancel</string>

</resources>