<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
	android:id="@+id/action_home_screen"
	android:orderInCategory="100"
	android:title="@string/menu_home_screen"
	app:showAsAction="never" />

    <item
	android:id="@+id/action_voicemail"
	android:orderInCategory="100"
	android:title="@string/menu_voicemail"
	app:showAsAction="never" />

    <item
	android:id="@+id/action_editContact"
	android:orderInCategory="100"
	android:title="@string/menu_edit_contact"
	app:showAsAction="never" />

    <item
	android:id="@+id/action_deleteContact"
	android:orderInCategory="100"
	android:title="@string/menu_delete_contact"
	app:showAsAction="never" />

    <item
	android:id="@+id/action_shareContact"
	android:orderInCategory="100"
	android:title="@string/menu_share"
	app:showAsAction="never" />

    <item
	android:id="@+id/action_SIMCARD"
	android:orderInCategory="100"
	android:title="@string/menu_set_default_sim_for_calls"
	app:showAsAction="never" />

</menu>